--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,5 @@ language: node_js
 node_js:
   - '0.10'
 script:
-  - npm install -g bower gulp
-  - bower i
-  - gulp build
-  - npm test
+  - npm install -g jspm gulp
+  - gulp
