--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "dist": "dist"
     },
     "dependencies": {
+      "bootstrap": "^3.3.1",
+      "css": "^0.1.0",
+      "github-buttons": "github:component/github-buttons@^0.0.4",
       "jquery": "^2.1.1"
     }
   }
