--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
       "bootstrap": "^3.3.1",
       "css": "^0.1.0",
       "github-buttons": "github:component/github-buttons@^0.0.4",
-      "jquery": "^2.1.1"
+      "jquery": "^2.1.1",
+      "plugin-jsx": "npm:plugin-jsx@^0.0.2",
+      "react": "^0.12.1"
     }
   }
 }
