--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
       "css": "^0.1.0",
       "github-buttons": "github:component/github-buttons@^0.0.4",
       "jquery": "^2.1.1",
+      "md": "github:floatdrop/system-md@master",
       "plugin-jsx": "npm:plugin-jsx@^0.0.2",
-      "react": "^0.12.1"
+      "react": "^0.12.1",
+      "showdown": "0.3.1"
     }
   }
 }
